# mlean2024_proyecto1

./: Readme.MD  pyproject.toml
Cuadernos/Auxiliares/: 2.4 Generacion_Texto_Cien_Años_Soledad.ipynb
Código/: 1. Carga y Transformación.ipynb  2. Preprocesamiento.ipynb  3. Cargar preprocesamiento.ipynb  4. Experimentos con modelos de clasificación copy.ipynb  4. Experimentos con modelos de clasificación.ipynb  8. Clustering.ipynb  ACP - Clase 2.ipynb  Clustering.ipynb  Fundamentos_Matematicos_de_SHAP.ipynb  Metricas_regresion.ipynb  Obesity_Problem.ipynb  Preprocesamiento_y_Entrenamiento_completo.ipynb  PrimeraPrueba.ipynb  iris_dataset.ipynb
